serverside/webapp/WEB-INF/base/eminstitute/community/default/theme/css/eminstitute.css
/* ... */
h2 {
	margin: 20px 0 20px;
	font-size: 1.6rem;
}
h3 {
	margin: 10px 0 15px;
	font-size: 1.2rem;
}
h4 {
	margin: 5px 0 15px;
	font-size: 1.2rem;
	color: #888;
}
h4 .btn {
	font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
}
a.primary {
	color: #218838;
	text-decoration: none;
}
a.primary:hover {
	color: #000;
	text-decoration: underline;
}
a.primary:hover .fa-solid {
	text-decoration: none;
}
.h-100-50 {
	height: calc(100% - 50px);
}
.h-100-80 {
	height: calc(100% - 80px);
}
.no-gutters {
	margin: 0;
}
.no-gutters .col-* {
	padding: 0;
}
.bg-white,
.bg-light {
	color: #000;
}
.btn {
	cursor: pointer;
	padding: 0.5rem 0.95rem;
	font-size: 0.95rem;
}
.btn-sm {
	padding: 0.3rem 0.75rem;
	font-size: 0.85rem;
	font-weight: normal;
	line-height: 1.25;
	border-radius: 0.2rem;
}
.btn-xs {
	padding: 0.25rem 0.5rem;
	font-size: 0.7rem;
	font-weight: normal;
	line-height: 1.1;
	border-radius: 0.1rem;
}
.btn-xxs {
	padding: 0.1rem 0.2rem;
	font-size: 0.65rem;
	font-weight: normal;
	line-height: 1.1;
	border-radius: 0.1rem;
}
.btn-file {
	position: relative;
	overflow: hidden;
}
.btn-file input[type="file"] {
	position: absolute;
	top: 0;
	right: 0;
	min-width: 100%;
	min-height: 100%;
	font-size: 100px;
	text-align: right;
	filter: alpha(opacity=0);
	opacity: 0;
	outline: none;
	background: white;
	cursor: inherit;
	display: block;
}
.btn-paynow {
	background-color: #b8dfcd !important;
	cursor: wait;
}
.btn-paynow.submitform {
	background-color: #198754 !important;
	cursor: default;
}
table {
  color: inherit;
}
.table {
	--bs-table-striped-bg: #e8f1ed;
	--bs-table-hover-bg: #e7e7e7;
}

.table-hover a:hover {
	text-decoration: none;
}
.search-list li:last-child,
.sidebar-list li:last-child {
	border-bottom: 1px solid #e5e5e5;
}
.pickfromiframe {
	display: none;
}
.emthumbimage {
	display: inline-block;
	margin: 0 auto;
	vertical-align: middle;
	padding: 0 0 4px 0;
}
.feed-maincol {
	box-shadow: none;
}
#mainNav.navbar-shrink {
	box-shadow: 2px 2px 6px 0 rgba(0, 0, 0, 0.4);
}
.applicationcontent {
	/*height: calc(100% - 70px);*/
	position: relative;
}
.applicationcontent.inapp {
	height: 100%;
}
.applicationcontent h1 {
	margin: 20px 0;
}
.entermedia-headertop-container {
	background-color: #111;
}
.account-top-menu {
	text-align: right;
	padding: 0px 0 4px;
}
/* .account-top-menu a {} */
.account-top-menu a.topnav-link {
	color: #bbb;
	margin-right: 20px;
	font-weight: 600;
	font-size: 0.9rem;
}
.account-top-menu a.active {
	color: #01b34f;
}
.account-top-menu a:hover {
	color: #fff;
	text-decoration: none;
}
.account-top-menu .homepage-btn {
	font-weight: bold;
	font-size: 0.9rem;
	padding: 0.175em 1em;
	line-height: 1;
	text-transform: none;
	background-color: #237c9c;
	border-color: #237c9c;
	border-radius: 0.25rem;
	color: #eee;
}
.account-top-menu .homepage-btn:hover,
.account-top-menu .homepage-btn.active {
	background-color: #3291ad;
	color: #ffffff;
}
.account-top-menu .homepage-btn {
	font-weight: bold;
	font-size: 0.9rem;
	padding: 0.175em 1em;
	line-height: 1;
	text-transform: none;
	background-color: #237c9c;
	border-color: #237c9c;
	border-radius: 0.25rem;
	color: #eee;
}
.account-top-menu .homepage-btn:hover,
.account-top-menu .homepage-btn.active {
	background-color: #3291ad;
	color: #ffffff;
}
.entermedia-header-container {
	background-color: #07172c;
}
.entermedia-header {
	padding: 15px 15px 20px;
}
#mainNav .navbar-nav {
	width: 100%;
}
#mainNav .navbar-nav .nav-item .nav-link {
	padding: 0.75rem 1rem;
	letter-spacing: 1px;
	color: white;
	font-size: 0.9rem;
}
#mainNav .dropdown:hover > .dropdown-menu {
	display: block;
	top: 100%;
}
#mainNav .dropdown-toggle::after {
	display: none;
}
#mainNav .navbar-nav .nav-item .nav-link.active,
#mainNav .navbar-nav .nav-item .nav-link:hover,
#mainNav .subnav-link:hover,
#mainNav .dropdown-item:hover .subnav-link {
	color: #01b34f;
	text-decoration: none;
}
#mainNav .dropdown-menu {
	background-color: #484848;
}
#mainNav .dropdown-item:focus,
#mainNav .dropdown-item:hover {
	background-color: #282828;
}
#mainNav .subnav-link {
	font-size: 0.86rem;
	color: white;
	text-decoration: none;
}
@media (min-width: 992px) {
	#mainNav {
		-webkit-transition:
			padding-top 0.3s,
			padding-bottom 0.3s;
		-moz-transition:
			padding-top 0.3s,
			padding-bottom 0.3s;
		transition:
			padding-top 0.3s,
			padding-bottom 0.3s;
		border: none;
		background-color: transparent;
	}
	#mainNav .navbar-brand {
		-webkit-transition: all 0.3s;
		-moz-transition: all 0.3s;
		transition: all 0.3s;
	}
	#mainNav .navbar-nav .nav-item .nav-link {
		padding: 1.2em 2em !important;
		margin-right: 2em;
	}
	#mainNav .navbar-nav .nav-last-item .nav-link {
		padding-right: 1px !important;
	}
	#mainNav.navbar-shrink {
		padding-top: 0;
		padding-bottom: 0;
		box-shadow: none;
	}
	#mainNav.navbar-shrink .navbar-brand {
		font-size: 1.25em;
		padding: 12px 0;
	}
	#mainNav .navbar-nav .btn {
		margin-top: 0.6rem;
	}
}
.oi-sidebar-toggler {
	display: inline-block;
	position: absolute;
	right: 0;
	width: 32px;
	padding: 0 10px;
	line-height: 32px;
	color: #ffffff !important;
	background-color: #0b172c !important;
	font-size: 1.1rem;
	/* line-height: 2; */
	border-radius: 0 !important;
	border: 0 none !important;
}
.oi-sidebar-toggler:hover {
	background-color: #d0d0d0 !important;
	color: #555;
}
.oi-sidebar-toggler-show {
	border: 1px solid #c0c0c0;
	background-color: #e0e0e0 !important;
	padding: 6px 6px 4px !important;
	box-shadow: 2px 2px 6px 0 rgba(0, 0, 0, 0.4);
	opacity: 0.8;
	z-index: 1000;
	left: 0;
	top: 72px;
	position: fixed;
}
.oi-sidebar-toggler-show:hover {
	background-color: #d0d0d0 !important;
}
.sidebar-list {
	margin: 0;
	padding: 0;
}
.search-list li,
.sidebar-list li {
	list-style: none;
}
.emrightcontent {
	height: calc(100%);
	margin-left: 0px;
	transition: margin-left 0.3s ease-in-out;
}
@media (min-width: 1080px) {
	.emrightcontent.empushcontent {
		margin-left: 248px;
	}
	.sidebar-togglerX {
		display: none;
	}
}
/* ... */

